# Jumper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: append_failure_data.py  label_tool.py  prepare_yolo_data.py  train_yolo.py
src/: __init__.py  calculator.py  config.py  controller.py  detector.py  failure_collector.py  screen_capture.py
src/examine/: __init__.py  coefficient_fitter.py  data_collector.py  image_selector.py
