[project]
name = "jumper"
version = "1.0.0"
description = "WeChat Jump Jump game automation script with YOLO detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.0",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pywin32>=311",
    "matplotlib>=3.10.0",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "easyocr>=1.7.2",
    "ultralytics>=8.3.247",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["src"]
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
reportPrivateImportUsage = false
